DTSCCI-395 Remove code smells from civil-service PR4