@@ -56,7 +56,7 @@ class CallbackHandlerFactoryTest {
             return new CallbackHandler() {
                 @Override
                 protected Map<String, Callback> callbacks() {
-                    return ImmutableMap.of(
+                    return Map.of(
                         callbackKey(ABOUT_TO_START), this::createCitizenClaim,
                         callbackKey(V_1, ABOUT_TO_SUBMIT), this::createCitizenClaim,
                         callbackKey(ABOUT_TO_SUBMIT, "start-claim"), this::createCitizenClaim,
@@ -81,7 +81,7 @@ class CallbackHandlerFactoryTest {
             return new CallbackHandler() {
                 @Override
                 protected Map<String, Callback> callbacks() {
-                    return ImmutableMap.of(
+                    return Map.of(
                         callbackKey(V_1, ABOUT_TO_SUBMIT), this::sendSealedClaim
                     );
                 }
@@ -108,7 +108,7 @@ class CallbackHandlerFactoryTest {
             return new CallbackHandler() {
                 @Override
                 protected Map<String, Callback> callbacks() {
-                    return ImmutableMap.of(
+                    return Map.of(
                         callbackKey(ABOUT_TO_SUBMIT), this::doMethod
                     );
                 }
@@ -137,7 +137,7 @@ class CallbackHandlerFactoryTest {
         CallbackParams params = CallbackParams.builder()
             .request(callbackRequest)
             .type(ABOUT_TO_SUBMIT)
-            .params(ImmutableMap.of(CallbackParams.Params.BEARER_TOKEN, BEARER_TOKEN))
+            .params(Map.of(CallbackParams.Params.BEARER_TOKEN, BEARER_TOKEN))
             .version(V_1)
             .build();
 
@@ -155,7 +155,7 @@ class CallbackHandlerFactoryTest {
         CallbackParams params = CallbackParams.builder()
             .request(callbackRequest)
             .type(ABOUT_TO_SUBMIT)
-            .params(ImmutableMap.of(CallbackParams.Params.BEARER_TOKEN, BEARER_TOKEN))
+            .params(Map.of(CallbackParams.Params.BEARER_TOKEN, BEARER_TOKEN))
             .version(V_2)
             .build();
 
@@ -177,7 +177,7 @@ class CallbackHandlerFactoryTest {
             .request(callbackRequest)
             .type(ABOUT_TO_SUBMIT)
             .version(V_1)
-            .params(ImmutableMap.of(CallbackParams.Params.BEARER_TOKEN, BEARER_TOKEN))
+            .params(Map.of(CallbackParams.Params.BEARER_TOKEN, BEARER_TOKEN))
             .build();
 
         CallbackResponse callbackResponse = callbackHandlerFactory.dispatch(params);
@@ -200,7 +200,7 @@ class CallbackHandlerFactoryTest {
             .request(callbackRequest)
             .type(ABOUT_TO_SUBMIT)
             .version(V_1)
-            .params(ImmutableMap.of(CallbackParams.Params.BEARER_TOKEN, BEARER_TOKEN))
+            .params(Map.of(CallbackParams.Params.BEARER_TOKEN, BEARER_TOKEN))
             .build();
 
         CallbackResponse callbackResponse = callbackHandlerFactory.dispatch(params);
@@ -223,7 +223,7 @@ class CallbackHandlerFactoryTest {
             .request(callbackRequest)
             .type(ABOUT_TO_SUBMIT)
             .version(V_1)
-            .params(ImmutableMap.of(CallbackParams.Params.BEARER_TOKEN, BEARER_TOKEN))
+            .params(Map.of(CallbackParams.Params.BEARER_TOKEN, BEARER_TOKEN))
             .build();
 
         CallbackResponse callbackResponse = callbackHandlerFactory.dispatch(params);
@@ -246,7 +246,7 @@ class CallbackHandlerFactoryTest {
             .request(callbackRequest)
             .type(ABOUT_TO_SUBMIT)
             .version(V_1)
-            .params(ImmutableMap.of(CallbackParams.Params.BEARER_TOKEN, BEARER_TOKEN))
+            .params(Map.of(CallbackParams.Params.BEARER_TOKEN, BEARER_TOKEN))
             .build();
 
         CallbackResponse callbackResponse = callbackHandlerFactory.dispatch(params);
@@ -265,7 +265,7 @@ class CallbackHandlerFactoryTest {
             .request(callbackRequest)
             .type(ABOUT_TO_SUBMIT)
             .version(V_1)
-            .params(ImmutableMap.of(CallbackParams.Params.BEARER_TOKEN, BEARER_TOKEN))
+            .params(Map.of(CallbackParams.Params.BEARER_TOKEN, BEARER_TOKEN))
             .build();
 
         CallbackResponse callbackResponse = callbackHandlerFactory.dispatch(params);
@@ -283,7 +283,7 @@ class CallbackHandlerFactoryTest {
         CallbackParams params = CallbackParams.builder()
             .request(callbackRequest)
             .type(ABOUT_TO_SUBMIT)
-            .params(ImmutableMap.of(CallbackParams.Params.BEARER_TOKEN, BEARER_TOKEN))
+            .params(Map.of(CallbackParams.Params.BEARER_TOKEN, BEARER_TOKEN))
             .build();
 
         CallbackResponse callbackResponse = callbackHandlerFactory.dispatch(params);
@@ -302,7 +302,7 @@ class CallbackHandlerFactoryTest {
             .request(callbackRequest)
             .type(ABOUT_TO_SUBMIT)
             .version(V_1)
-            .params(ImmutableMap.of(CallbackParams.Params.BEARER_TOKEN, BEARER_TOKEN))
+            .params(Map.of(CallbackParams.Params.BEARER_TOKEN, BEARER_TOKEN))
             .build();
 
         CallbackResponse callbackResponse = callbackHandlerFactory.dispatch(params);
